# Market_Analysis_Programme

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements1.txt
app/: main.py  test.py
app/analysis/: 5_by_rev_coun.py  app.py  app_top5.py  db_connect.py  debug.py  image_gen.py  lg-tool_calling.py  lg.py  market_tool.py  new-file.py  new-file1.py  new_file.py  reviews_summary_tool.py  swot_overall.py  swot_tool_1.py  test_swot.py  tool1.py  tools.py  top5_brands_by_revenue.py  user_functions.py
app/api/: README.md  __init__.py  server.py
app/data_fetching/agents/: intent_agent.py  schema_agent.py  sql_agent.py  validator_agent.py
app/data_fetching/prompts/: query_prompt
app/data_fetching/services/: comemnt.py  db_connect.py  graph_viz.py  nodes.py
app/data_fetching/templates/: brand_template.sql  product_template.sql
app/data_fetching/tests/: credentials.py  run_pipeline.py  test_connection.py
app/visualization/: market_tool.py  viz_node.py
output/: final_analysis_output.json  final_analysis_report.txt
